# clickmem

./: AGENTS.md  PLAN-CEO-BRAIN.md  README.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  release.yml
claude-hooks/.claude-plugin/: plugin.json
claude-hooks/hooks/: hooks.json
clickmem-hook/: handler.js
clickmem-plugin/: index.js  openclaw.plugin.json  package.json
clickmem-plugin/lib/: capture.js  cli.js
cursor-hooks/lib/: clickmem-client.js  handlers.js
docs/: competitive-analysis.md
examples/: claude-code-hooks-local.json  claude-code-hooks-remote.json
scripts/: cleanup_data.py
src/memory_core/: ceo_db.py  ceo_extractor.py  ceo_query_analyzer.py  ceo_retrieval.py  cli.py  db.py  embedding.py  extractor.py  json_utils.py  llm.py  local_llm.py  maintenance_mod.py  mcp_server.py  md_sync_mod.py  models.py  refinement.py  retrieval.py  server.py  service.py  session_replay.py  transport.py  upsert.py
tests/: conftest.py  test_auth.py  test_cli.py  test_db.py  test_discovery.py  test_llm_modes.py  test_mcp_server.py  test_refinement.py  test_server.py  test_transport.py  test_upsert.py
