[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clickmem"
version = "0.3.3"
description = "Unified memory center for AI coding agents — local-first, LAN-shareable"
requires-python = ">=3.10"
dependencies = [
    "chdb>=4.0.2",
    "typer>=0.9.0",
    "rich>=13.0",
    "sentence-transformers>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "mcp>=1.0",
    "starlette",
    "zeroconf>=0.130",
    "mlx-lm>=0.22; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
llm = ["litellm>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "freezegun>=1.0",
    "litellm>=1.0",
]

[project.scripts]
memory = "memory_core.cli:app"
clickmem-mcp = "memory_core.mcp_server:main_stdio"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring real chDB",
    "property_based: marks Hypothesis property-based tests",
    "semantic: marks semantic distance tests requiring real embedding model",
]

[tool.coverage.run]
source = ["memory_core"]

[tool.coverage.report]
show_missing = true
